--- a/Unified AD Subtypes-PART1-Data_Processing.ipynb
+++ b/Unified AD Subtypes-PART1-Data_Processing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "536eac23-c4c1-4670-9d18-230293f948c3",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "9b366ed7-cb7d-4a00-95a5-a9d9eec60d23",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "260c9a49-9bd8-4cbf-a743-ea7bc845eb7d",
    "metadata": {},
    "outputs": [],
@@ -173,6 +173,7 @@
     "volume_cols = [col for col in df_merge2025.columns if ((\"Left\" in col or \"Right\" in col) and (\"CorticalVolume\" in col or \"SubcorticalVolume\" in col))]\n",
     "df_merge2025[\"Total_BrainVolume\"] = df_merge2025[volume_cols].sum(axis=1, skipna=True) # Sum across those columns row-wise\n",
     "total_vol = \"Total_BrainVolume\" \n",
+    "ab_status = \"AMYLOID_STATUS\"\n",
     "\n",
     "\n",
     "#Creation of Age column\n",
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "id": "64c13642-c189-4aff-9b43-500154082855",
    "metadata": {},
    "outputs": [],
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "161ed3f7-4fd7-479d-b865-58a9f983ab32",
    "metadata": {},
    "outputs": [],
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "f5ef6ab2-b26f-42f3-a035-7682e5c4bdcd",
    "metadata": {},
    "outputs": [],
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "3e27442e-526d-4c72-96b0-17fead54b678",
    "metadata": {},
    "outputs": [],
@@ -679,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "id": "d32ba245-c6f8-4527-bbd4-b2c8d69c8371",
    "metadata": {
     "scrolled": true
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "id": "f7f8a214-3274-473d-9cca-321216228d0c",
    "metadata": {
     "scrolled": true
@@ -807,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "684f046a-b904-4cde-9354-d11669e49b28",
    "metadata": {},
    "outputs": [
@@ -906,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "id": "367d6c74-8e83-47f4-9205-15e4bff8be41",
    "metadata": {},
    "outputs": [
@@ -972,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "bf0e7bd2-d26f-47de-9d0f-a7c4345ecb9a",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "8c12f6f0-db1d-4825-a0c9-eebf76eabc65",
    "metadata": {},
    "outputs": [
@@ -1059,9 +1060,9 @@
      "text": [
       "Counts per retirement status:\n",
       " PTNOTRT\n",
-      "0.0     256\n",
-      "1.0    1012\n",
-      "2.0      25\n",
+      "0.00     256\n",
+      "1.00    1012\n",
+      "2.00      25\n",
       "Name: count, dtype: int64\n"
      ]
     },
@@ -1160,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "id": "582c30ca-7bcf-4136-bcd4-656309c1c681",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "id": "760b71c0-2518-403c-98f7-a37278b3c04e",
    "metadata": {},
    "outputs": [
@@ -1304,8 +1305,8 @@
       "Dep. Variable:              DIAGNOSIS   No. Observations:                  877\n",
       "Model:                        MNLogit   Df Residuals:                      863\n",
       "Method:                           MLE   Df Model:                           12\n",
-      "Date:                Wed, 06 Aug 2025   Pseudo R-squ.:                  0.3309\n",
-      "Time:                        00:02:56   Log-Likelihood:                -607.13\n",
+      "Date:                Sun, 17 Aug 2025   Pseudo R-squ.:                  0.3309\n",
+      "Time:                        11:06:57   Log-Likelihood:                -607.13\n",
       "converged:                       True   LL-Null:                       -907.32\n",
       "Covariance Type:            nonrobust   LLR p-value:                8.753e-121\n",
       "===============================================================================\n",
@@ -1395,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "id": "6af2ff64-70dc-4b1f-b82d-1539d94c6382",
    "metadata": {},
    "outputs": [
@@ -1508,6 +1509,35 @@
     "num_train_ab = (ab_pet_trainset[rid].nunique())\n",
     "print(f\"\\nTrain set Amyloid Beta PET (FBP) : The number of subjects with AB PET visits (and possibly one more scan type) is {num_train_ab}.\\n\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "6d3d8bb0-7407-4e22-b5cc-04fa952cf46d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AMYLOID_STATUS\n",
+      "1.00    499\n",
+      "0.00    373\n",
+      "Name: count, dtype: int64\n",
+      "AMYLOID_STATUS\n",
+      "1.00   57.22\n",
+      "0.00   42.78\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counts per category\n",
+    "print(ab_pet_trainset[\"AMYLOID_STATUS\"].value_counts())\n",
+    "\n",
+    "# Counts + proportions\n",
+    "print(ab_pet_trainset[\"AMYLOID_STATUS\"].value_counts(normalize=True) * 100)\n"
    ]
   },
   {
@@ -3552,7 +3582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "2fa134d1-5f1d-4f51-9d44-cd1cfd37b299",
    "metadata": {},
    "outputs": [
@@ -3560,12 +3590,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total unique RIDs across all datasets: 1936\n"
+      "Total unique RIDs across all datasets: 1936\n",
+      "Total unique RIDs in the Train datasets: 1566\n",
+      "Total unique RIDs across all Test datasets: 1324\n",
+      "Total unique RIDs across all Longitudinal Test datasets: 1019\n"
      ]
     }
    ],
    "source": [
-    "# Combine all RIDs from the 8 dataframes\n",
+    "# Combine all RIDs from the 7 dataframes\n",
     "all_rids = set()\n",
     "\n",
     "for df in [\n",
@@ -3579,15 +3612,74 @@
     "]:\n",
     "    all_rids.update(df['RID'].unique())\n",
     "\n",
-    "print(f\"Total unique RIDs across all datasets: {len(all_rids)}\")\n"
+    "print(f\"Total unique RIDs across all datasets: {len(all_rids)}\")\n",
+    "\n",
+    "train_rids = set()\n",
+    "for df in [\n",
+    "    mri_final,\n",
+    "    ab_final,\n",
+    "    tau_final\n",
+    "]:\n",
+    "    train_rids.update(df['RID'].unique())\n",
+    "\n",
+    "print(f\"Total unique RIDs in the Train datasets: {len(train_rids)}\")\n",
+    "\n",
+    "test_rids = set()\n",
+    "\n",
+    "for df in [\n",
+    "    multimodal_final,\n",
+    "    longitudinal_mri_final,\n",
+    "    longitudinal_ab_final,\n",
+    "    longitudinal_tau_final,\n",
+    "]:\n",
+    "    test_rids.update(df['RID'].unique())\n",
+    "\n",
+    "print(f\"Total unique RIDs across all Test datasets: {len(test_rids)}\")\n",
+    "\n",
+    "long_rids = set()\n",
+    "\n",
+    "for df in [\n",
+    "    longitudinal_mri_final,\n",
+    "    longitudinal_ab_final,\n",
+    "    longitudinal_tau_final,\n",
+    "]:\n",
+    "    long_rids.update(df['RID'].unique())\n",
+    "\n",
+    "print(f\"Total unique RIDs across all Longitudinal Test datasets: {len(long_rids)}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b9a54a9b-4918-4f90-92f7-74d608055bbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Missing/Zero Summary for AB Dataset:\n",
+      "  Age         :    0 missing/0 (  0.0%) of 872\n",
+      "  MMSCORE     :  705 missing/0 ( 80.8%) of 872\n",
+      "  AGE_RETIRE  :  178 missing/0 ( 20.4%) of 872\n",
+      "  PTEDUCAT    :    0 missing/0 (  0.0%) of 872\n",
+      "\n",
+      "📊 Missing/Zero Summary for TAU Dataset:\n",
+      "  Age         :    0 missing/0 (  0.0%) of 577\n",
+      "  MMSCORE     :  491 missing/0 ( 85.1%) of 577\n",
+      "  AGE_RETIRE  :  134 missing/0 ( 23.2%) of 577\n",
+      "  PTEDUCAT    :    0 missing/0 (  0.0%) of 577\n",
+      "\n",
+      "📊 Missing/Zero Summary for MRI Dataset:\n",
+      "  Age         :    0 missing/0 (  0.0%) of 1293\n",
+      "  MMSCORE     :   12 missing/0 (  0.9%) of 1293\n",
+      "  AGE_RETIRE  :  287 missing/0 ( 22.2%) of 1293\n",
+      "  PTEDUCAT    :    0 missing/0 (  0.0%) of 1293\n"
+     ]
+    }
+   ],
    "source": [
     "modalities = {\n",
     "    'AB': (ab_final),\n",
@@ -3618,10 +3710,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ca3d3cdd-cac5-42dc-aa73-6d55c879daa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows combined across all datasets (group 1): 2742\n",
+      "\n",
+      "Missing/Zero counts and % across all rows of all datasets combined (group 1):\n",
+      "\n",
+      "Age         :      0 missing/0 out of 2742   rows (  0.0%)\n",
+      "MMSCORE     :   1208 missing/0 out of 2742   rows ( 44.1%)\n",
+      "AGE_RETIRE  :    599 missing/0 out of 2742   rows ( 21.8%)\n",
+      "PTEDUCAT    :      0 missing/0 out of 2742   rows (  0.0%)\n",
+      "APOE4       :      0 missing/0 out of 2742   rows (  0.0%)\n",
+      "DIAGNOSIS_STRING:      0 missing/0 out of 2742   rows (  0.0%)\n",
+      "PTGENDER    :      0 missing/0 out of 2742   rows (  0.0%)\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "Total rows combined across all datasets (group 2): 4687\n",
+      "\n",
+      "Missing/Zero counts and % across all rows of all datasets combined (group 2):\n",
+      "\n",
+      "Age         :      0 missing/0 out of 4687   rows (  0.0%)\n",
+      "MMSCORE     :    618 missing/0 out of 4687   rows ( 13.2%)\n",
+      "AGE_RETIRE  :   1043 missing/0 out of 4687   rows ( 22.3%)\n",
+      "PTEDUCAT    :      0 missing/0 out of 4687   rows (  0.0%)\n",
+      "APOE4       :      0 missing/0 out of 4687   rows (  0.0%)\n",
+      "DIAGNOSIS_STRING:      0 missing/0 out of 4687   rows (  0.0%)\n",
+      "PTGENDER    :      0 missing/0 out of 4687   rows (  0.0%)\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to count missing/zero, but treat apoe4 zeros as valid\n",
     "def missing_or_zero(series, var_name):\n",
@@ -3684,36 +3808,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5980989e-cbb4-45b3-80eb-cba9f6479516",
+   "execution_count": 51,
+   "id": "8a56c8cd-5fff-4a3c-878d-702f2b3e88db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Gender proportions in TRAIN set:\n",
+      "\n",
+      "Total subjects: 2742\n",
+      "Known gender:   2742  (100.0%)\n",
+      " - Female:      1308  (47.7%)\n",
+      " - Male:        1434  (52.3%)\n",
+      "🔹 Gender proportions in TEST set:\n",
+      "\n",
+      "Total subjects: 4687\n",
+      "Known gender:   4687  (100.0%)\n",
+      " - Female:      2242  (47.8%)\n",
+      " - Male:        2445  (52.2%)\n"
+     ]
+    }
+   ],
    "source": [
-    "def gender_counts(dfs, group_label):\n",
-    "    total_gender = Counter()\n",
+    "def compute_gender_proportions(dfs, gender_var=gender):\n",
+    "    total_male = 0\n",
+    "    total_female = 0\n",
+    "    total_missing = 0\n",
+    "    total_rows = 0\n",
     "\n",
     "    for df in dfs:\n",
-    "        if 'PTGENDER' in df.columns:\n",
-    "            gender_data = df['PTGENDER'].dropna()\n",
-    "            total_gender.update(gender_data)\n",
+    "        if gender_var in df.columns:\n",
+    "            gender_series = df[gender_var]\n",
+    "            total_male += (gender_series == 1.0).sum()\n",
+    "            total_female += (gender_series == 2.0).sum()\n",
+    "            total_missing += gender_series.isna().sum()\n",
+    "            total_rows += len(gender_series)\n",
     "\n",
-    "    print(f\"\\n Gender distribution in {group_label}:\")\n",
-    "    for gender, count in total_gender.items():\n",
-    "        print(f\"  {gender:<6}: {count} ({100 * count / sum(total_gender.values()):.1f}%)\")\n",
+    "    total_known = total_male + total_female\n",
+    "    print(f\"\\nTotal subjects: {total_rows}\")\n",
+    "    print(f\"Known gender:   {total_known}  ({100 * total_known / total_rows:.1f}%)\")\n",
+    "    if total_known > 0:\n",
+    "        print(f\" - Female:      {total_female}  ({100 * total_female / total_known:.1f}%)\")\n",
+    "        print(f\" - Male:        {total_male}  ({100 * total_male / total_known:.1f}%)\")\n",
+    "    else:\n",
+    "        print(\" - No known gender values found.\")\n",
     "\n",
-    "# Group 1 (Train)\n",
+    "\n",
+    "# Train set\n",
     "dfs1 = [mri_final, ab_final, tau_final]\n",
-    "gender_counts(dfs1, \"Train (Group 1)\")\n",
     "\n",
-    "# Group 2 (Test)\n",
+    "# Test set\n",
     "dfs2 = [multimodal_final, longitudinal_mri_final, longitudinal_ab_final, longitudinal_tau_final]\n",
-    "gender_counts(dfs2, \"Test (Group 2)\")\n"
+    "\n",
+    "\n",
+    "print(\"🔹 Gender proportions in TRAIN set:\")\n",
+    "compute_gender_proportions(dfs1)\n",
+    "\n",
+    "print(\"🔹 Gender proportions in TEST set:\")\n",
+    "compute_gender_proportions(dfs2)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a56c8cd-5fff-4a3c-878d-702f2b3e88db",
+   "id": "670afc9d-89e5-4338-aaf3-e02141869263",
    "metadata": {},
    "outputs": [],
    "source": []
